cluster/kubernetes/apps/external/l1nkr/ingress/l1nkr-http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: l1nkr-ingress
  namespace: external
  annotations:
    gatus.home-operations.com/enabled: 'true'
    gatus.home-operations.com/endpoint: |
      name: l1nkr
spec:
  hostnames:
    - l1nkr.cjsolsen.com
  parentRefs:
    - name: external-gateway
      namespace: network
      sectionName: l1nkr-ingress
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: l1nkr
          port: 8080
